@@ -102,6 +102,8 @@
  - (bal) sftp-sever.c  '%8lld' to '%8llu' (OpenBSD Sync)
  - (bal) uuencode.c resync w/ OpenBSD tree, plus whitespace.
  - (bal) A bit more whitespace cleanup
+ - (djm) Set PAM_RHOST earlier, patch from Andrew Bartlett 
+   <abartlet@pcug.org.au>
 
 20010210
  - (djm) Sync sftp and scp stuff from OpenBSD:
